--- a/01/ejercicio1.html
+++ b/01/ejercicio1.html
@@ -2,9 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-
+	<link rel="stylesheet" href="ejercicio1.css">
     <title>Ejercicio 1</title>
-    <link rel="stylesheet" href="styles.css">
 
   </head>
 
